--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -10,4 +10,4 @@ jobs:
 
         steps:
             - name: dotnet check
-              run: dotnet format
+              run: dotnet-format --version
