--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -12,5 +12,8 @@ jobs:
             - name: dotnet check
               run: dotnet --version
 
-            - name: 改行コード
+            - name: 改行コード1
+              run: od -c Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
+
+            - name: 改行コード2
               run: od -c Hutzper.Library.FormsMekiki/task/test.py
