--- a/.github/workflows/dotnet-format.yml
+++ b/.github/workflows/dotnet-format.yml
@@ -13,7 +13,7 @@ jobs:
               run: dotnet --version
 
             - name: 改行コード1
-              run: od -c Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
+              run: od -c /Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
 
             - name: 改行コード2
-              run: od -c Hutzper.Library.FormsMekiki/task/test.py
+              run: od -c /Hutzper.Library.FormsMekiki/task/test.py
